--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 
   <header>
+    <title>Home</title>
+    <meta charset="utf-8"/>
+    <meta name="description" content="Data Visualisation Project"/>
+    <meta name="keywords" content="HTML, CSS, D3, CSV"/>
+    <meta name="author" content="Gabriel Reynolds, Nicholas Wee"/>
     <link rel="stylesheet" href="style.css">
   </header>
-
   <body>
+    <h1 class="title">Title Placeholder</h1>
     <nav>
       <ul>
         <li><a href="index.html">Overview</a></li>
@@ -13,7 +18,8 @@
         <li><a href="recycle.html">Recycle</a></li>
       </ul>
     </nav>
-
+    <br>
+    <h2>Graph Title</h2>
     <div class="main-container">
       <div class="main-vis">
         <iframe src=""></iframe>
