- Implemented basic pie chart with border - Will add padding and hover information    tomorrow + plus line chart - Wanted to do more but working with <div> in d3 was trickier then expected

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="HTML, CSS, D3, CSV"/>
     <meta name="author" content="Gabriel Reynolds, Nicholas Wee"/>
     <link rel="stylesheet" href="style.css">
+    <script src="https://d3js.org/d3.v6.min.js"></script>
   </header>
   <body>
     <h1 class="title">Title Placeholder</h1>
@@ -25,9 +26,15 @@
         <iframe src=""></iframe>
       </div>
     </div>
+
+    <div class="other-vis">
+      <p id="pieChart"></p>
+    </div>
+
   </body>
 
   <footer>
   </footer>
 
+    <script src="scripts/index.js"></script> <!-- try moving later -->
 </html>
