Cleaned up code, fixed rectangle clipping and created placeholders

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     </div>
 
     <div class="other-vis">
-      <p id="pieChart"></p>
+        <g id="svg"></p>
+        <g id="lineChart"></p>
     </div>
 
   </body>
