Revert "Cleaned up code, fixed rectangle clipping and created placeholders"
This reverts commit 925089f2ac5a0c3cc1fb0e8092c91f1feb0f7c54.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </div>
 
     <div class="other-vis">
-        <g id="svg"></p>
-        <g id="lineChart"></p>
+      <p id="pieChart"></p>
     </div>
 
   </body>
