--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     
     <link rel="stylesheet" href="style.css">
+    <script src="https://d3js.org/d3.v6.min.js"></script>
   </header>
   <body>
     <!--h1 class="title">Title Placeholder</h1-->
@@ -41,6 +42,9 @@
 
       <div class="sub-vis">
         <div class="sub-vis-home">
+          <div class="other-vis">
+            <p id="svg"></p>
+          </div>
           <iframe src=""></iframe>
           <button class="zoom" type="button" name="zoom">
             <i class="fas fa-expand-alt"></i>
@@ -61,10 +65,9 @@
         </div>
       </div>
     </div>
-
   </body>
 
   <footer></footer>
 
-    <!--script src="scripts/index.js"></script> <!-- try moving later -->
+  <script src="scripts/index.js"></script>
 </html>
