Improved responsiveness, cleaned code, implemented line graph and fixed issues reading data in PieChart
TO-DO:
- Resolve x-axis issue with line chart
- Finish implementing responsiveness
- Bubble chart

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <h2>Graph Title</h2>
     <div class="main-container">
       <div class="main-vis">
-        <iframe src=""></iframe>
       </div>
     </div>
 
-    <div class="other-vis">
-      <p id="svg"></p>
+    <div id="other-vis">
+        <g id="svg"></p>
+        <g id="lineChart"></p>
     </div>
 
   </body>
