- In the process of altering to fit new SVG layout

--- a/index.html
+++ b/index.html
@@ -39,26 +39,25 @@
         </iframe>
       </div>
       <br>
-
       <div class="sub-vis">
         <div class="sub-vis-home" id="sub-vis-home">
             <p id="pieChart"></p>
-            <button class="zoom" type="button" name="zoom">
+    <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
-            </button>
+            </button> -->
 
           <p id="lineChart"></p>
-            <button class="zoom" type="button" name="zoom">
+    <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
-            </button>
+            </button> -->
 
           <p id="bubbleChart"></p>
-            <button class="zoom" type="button" name="zoom">
+    <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
-            </button>
-
+            </button> -->
         </div>
       </div>
+    </div>
   </body>
 
   <footer></footer>
