- Fixed SVG issue and cleaned code

--- a/index.html
+++ b/index.html
@@ -39,19 +39,18 @@
         </iframe>
       </div>
       <br>
-      <div class="sub-vis">
-        <div class="sub-vis-home" id="sub-vis-home">
-            <p id="pieChart"></p>
+      <div class="sub-vis" id="sub-vis">
+          <g id="charts"></g>
+        </div>
     <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
             </button> -->
 
-          <p id="lineChart"></p>
+
     <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
             </button> -->
 
-          <p id="bubbleChart"></p>
     <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
             </button> -->
