--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <meta name="keywords" content="HTML, CSS, D3, CSV"/>
     <meta name="author" content="Gabriel Reynolds, Nicholas Wee"/>
 
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script>
+      var d3v3 = window.d3;   // load different versions of d3 library
+      window.d3 = null;
+    </script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="scripts/setup.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
   </header>
 
   <body>
     <nav>
-      <h1>Title</h1>
-      <br>
+      <h1>Title</h1><br>
       <ul>
         <li><a href="index.html">Overview</a></li>
         <li><a href="personal.html">Personal / Household</a></li>
@@ -25,19 +31,18 @@
     </nav><br>
 
     <div class="vis-container">
-      <div class="main-vis">
-        <!--Grouped bar graph: https://www.d3-graph-gallery.com/graph/barplot_grouped_basicWide.html-->
 
+      <div class="main-vis">
         <div id="overview-vis">
           <script src="scripts/overview.js"></script>
         </div>
-        <iframe id="overview-vis">
+        <div id="overview-text"></div>
+      </div><br>
 
-        </iframe>
-      </div>
-      <br>
       <div class="sub-vis" id="sub-vis">
-          <g id="charts"></g>
+          <g id="charts">
+            <!--script src="scripts/index.js"></script-->
+          </g>
       </div>
 
       <!-- Commented out for now, will implement later -->
@@ -54,13 +59,10 @@
     <!--        <button class="zoom" type="button" name="zoom">
               <i class="fas fa-expand-alt"></i>
             </button> -->
-        </div>
-
-      </div>
     </div>
   </body>
 
   <footer></footer>
 
-  <script src="scripts/index.js"></script>
+  
 </html>
