Mouseover info for grouped bar chart

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
         <div id="overview-vis">
           <script src="scripts/overview.js"></script>
         </div>
-        <div id="overview-text"></div>
+        <div id="overview-text">
+          <h2>Figure 1: Waste Generation by Waste Material in Australia</h2>
+          <p>The visualisation above illustrates the waste generated in Australia between the year 2016 and 2019. The amount of waste shows an increasing trend on most occasions. </p>
+          <p><i>Source: Australian Bureau of Statistics</i></p>
+        </div>
       </div><br>
 
       <div class="sub-vis" id="sub-vis">
           <g id="charts">
-            <!--script src="scripts/index.js"></script-->
+            <script src="scripts/index.js"></script>
           </g>
       </div>
 
