Implemented main visualisation for Personal/Household page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <br>
-    <div class="sub-vis" id="sub-vis">
+    <div id="sub-vis">
       <script src="scripts/index.js"></script>
     </div>
     <div id="text">
@@ -77,6 +77,4 @@
 
   </body>
   <footer></footer>
-
-
 </html>
