--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       window.d3 = null;
     </script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
-    <script src="scripts/setup.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
@@ -33,10 +32,10 @@
     <div class="vis-container">
 
       <div class="main-vis">
-        <div id="overview-vis">
+        <div class="overview-vis">
           <script src="scripts/overview.js"></script>
         </div>
-        <div id="overview-text">
+        <div class="overview-text">
           <h2>Figure 1: Waste Generation by Waste Material in Australia</h2>
           <p>The visualisation above illustrates the waste generated in Australia between the year 2016 and 2019. The amount of waste shows an increasing trend on most occasions. </p>
           <p><i>Source: Australian Bureau of Statistics</i></p>
