--- a/recycle.html
+++ b/recycle.html
@@ -6,9 +6,11 @@
         <meta name="description" content="Data Visualisation Project"/>
         <meta name="keywords" content="HTML, CSS, D3, CSV"/>
         <meta name="author" content="Gabriel Reynolds, Nicholas Wee"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="stylesheet" href="style.css">
+        <script src="https://d3js.org/d3.v6.min.js"></script>
       </header>
-    
+
       <body>
         <h1 class="title">Title Placeholder</h1>
         <nav>
@@ -18,4 +20,18 @@
             <li><a href="recycle.html">Recycle</a></li>
           </ul>
         </nav>
+
+        <div class="vis-container">
+          <div id="sub-vis"></div>
+          <div id="text">
+            <div id="area-text">
+
+            </div>
+            <div id="pie-text">
+
+            </div>
+          </div>
+        </div>
+    <script src="scripts/recycle2.js"></script>
+    </body>
 </html>
