--- a/personal.html
+++ b/personal.html
@@ -26,7 +26,7 @@
             <div id="overview-vis">
             </div>
             <div id="overview-text">
-              <h2>Figure 1: Total Recorded MSW vs. MSW Sent to Landfill</h2>
+              <h2>Figure 1: Total Recorded MSW vs. MSW Sent to Landfill, 2014 - 2019</h2>
               <p>The visualisation above depicts the total amount of recorded Municipal Solid Waste (MSW) between the years 2014-2019, plotted against the amount of which was sent to landfill.
               Both amounts appear to be gradually, albeit slowly, decreasing. Exact values can be seen by hovering over the relevant dot points.</p>
               <p><i>Source: Australian National Waste Report 2020</i></p>
@@ -36,7 +36,7 @@
           <div id="sub-vis"></div>
           <div id="text">
             <div id="scatter-text">
-              <h3>Figure 2: Government Expenditure on Waste vs. Waste Intensity</h3>
+              <h3>Figure 2: Government Expenditure on Waste vs. Waste Intensity, 2016 - 2019</h3>
               <p>The scatterplot above shows recorded Government Expenditure on Waste Disposal against the calculated Waste Intensity - that is, the cost of processing and disposing of a single tonne - across the 2016 - 2019 period.
               As can be seen, as the Expenditure value increase, the relevant Intensity value appears to decrease, likely due to recent changes in how waste is handled. Exact values can be seen by hovering over the relevant dot points.</p>
               <p><i>Source: Australian Bureau of Statistics</i></p>
