--- a/recycle.html
+++ b/recycle.html
@@ -25,10 +25,16 @@
           <div id="sub-vis"></div>
           <div id="text">
             <div id="area-text">
-
+              <h3>Total Recorded Waste vs. Total Recycled Waste, 2016 - 2019</h3>
+              <p>The area chart above displays the total recorded amount of waste recorded in relation to the total amount of waste recycled. As can be seen, generally half of recorded waste appears to be recycled,
+              despite the gradually increasing amount each year. Exact values can be seen by hovering over the relevant dot points.</p>
+              <p><i>Source: Australian Bureau of Statistics</i></p>
             </div>
             <div id="pie-text">
-
+              <h3>Fate of Recorded Waste, 2018 - 2019</h3>
+              <p>The pie chart above illustrates the various fates of recorded waste during the 2018-2019 period. As displayed, Recycling (highlighted in green) accounts for almost two thirds of all recorded waste,
+              followed by landfill which nearly consist of the remaining third. Other output streams and their exact amount of waste can be seen by hovering over each segment.</p>
+              <p><i>Source: Australian Bureau of Statistics</i></p>
             </div>
           </div>
         </div>
