Cleaned up code, added comments

--- a/recycle.html
+++ b/recycle.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Gabriel Reynolds, Nicholas Wee"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="stylesheet" href="style.css">
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://d3js.org/d3.v6.min.js"></script>
       </header>
 
@@ -53,6 +54,7 @@
             </div>
           </div>
         </div>
+
     <script src="scripts/recycle2.js"></script>
     </body>
 </html>
