--- a/personal.html
+++ b/personal.html
@@ -11,8 +11,9 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
   </header>
       <body>
-        <h1>Vis for Environment</h1>
+        
         <nav>
+          <h1>Vis for Environment</h1><br/>
           <ul>
             <li><a href="index.html">Overview</a></li>
             <li><a href="personal.html">Personal / Household</a></li>
